--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "flowbite-react": "^0.11.8",
+    "framer-motion": "^12.23.3",
     "next": "15.3.5",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
