--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@splidejs/react-splide": "^0.7.12",
     "flowbite-react": "^0.11.8",
     "framer-motion": "^12.23.3",
+    "leaflet": "^1.9.4",
     "next": "15.3.5",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
