--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@splidejs/react-splide": "^0.7.12",
+    "firebase": "^12.0.0",
     "flowbite-react": "^0.11.8",
     "framer-motion": "^12.23.3",
+    "highlight.js": "^11.11.1",
     "leaflet": "^1.9.4",
     "next": "15.3.5",
     "postcss": "^8.5.6",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0"
